tests/baselines/reference/project/relativeGlobalRef/node/relativeGlobalRef.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
consume.ts(5,18): error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.
decl.d.ts(3,21): error TS7010: 'call', which lacks return-type annotation, implicitly has an 'any' return type.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decl.d.ts (1 errors) ====
    declare module "decl"
    {
        export function call();
                        ~~~~
!!! error TS7010: 'call', which lacks return-type annotation, implicitly has an 'any' return type.
    }
==== consume.ts (1 errors) ====
    ///<reference path="decl.d.ts" />
    import decl = require("decl");
    var str = decl.call();
    
    declare function fail();
                     ~~~~
!!! error TS7010: 'fail', which lacks return-type annotation, implicitly has an 'any' return type.
    
    if(str !== "success") {
        fail();
    }